fix(llvm17): Pin to GCC 13 for arm64
https://github.com/llvm/llvm-project/issues/78691

Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/llvm17.yaml
+++ b/llvm17.yaml
@@ -31,6 +31,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - cmake
+      - gcc-13
       - git
       - help2man
       - libffi-dev
@@ -50,6 +51,11 @@ pipeline:
       expected-commit: 6009708b4367171ccdbf4b5905cb6a803753fe18
 
   - runs: |
+      # https://github.com/llvm/llvm-project/issues/78691
+      if [ "${{build.arch}}" = "arm64" ]; then
+        gcc_version="-13"
+      fi
+
       ffi_include_dir="$(pkg-config --cflags-only-I libffi | sed 's|^-I||g')"
       python_version=$(python3 -V | sed 's/.*\([0-9]\{1,\}\.[0-9]\{1,\}\)\..*/\1/')
 
@@ -88,7 +94,9 @@ pipeline:
         -DCLANG_PLUGIN_SUPPORT=ON \
         -DCLANG_PYTHON_BINDINGS_VERSIONS="$python_version" \
         -DCLANG_VENDOR=Wolfi \
-        -DLIBCLANG_BUILD_STATIC=ON
+        -DLIBCLANG_BUILD_STATIC=ON \
+        -DCMAKE_C_COMPILER=/usr/bin/gcc$gcc_version \
+        -DCMAKE_CXX_COMPILER=/usr/bin/g++$gcc_version
 
       cmake --build output --target llvm-tblgen
       cmake --build output --target clang-tblgen
