--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -109,11 +109,6 @@ pipeline:
       # install `gitlab`
       python${{vars.py-version}} -m pip install python-gitlab
 
-  - uses: go/bump
-    with:
-      replaces: github.com/mholt/archiver/v3=github.com/anchore/archiver/v3@v3.5.2
-      show-diff: true
-
   - if: ${{build.arch}} == 'aarch64'
     runs: |
       mkdir -p /usr/src
@@ -161,7 +156,6 @@ pipeline:
       unshare --user --map-root-user \
         invoke -e system-probe.build \
         --strip-object-files \
-        --no-bundle \
         --bundle-ebpf
 
   - runs: |
@@ -297,11 +291,12 @@ subpackages:
           - uses: git-checkout
             with:
               repository: https://github.com/DataDog/integrations-core
-              branch: ${{vars.datadog-major-minor-x}} # 7.59.x
-              expected-commit: 3189af0e0ae840c9a4bab3131662c7fd6b0de7fb # needs to be updated with each new release
+              branch: ${{vars.datadog-major-minor-x}} # 7.62.x
+              expected-commit: 59ae7b79fdbb5c14abacf26e1536c338b9ebfb7f # needs to be updated with each new release
+              depth: -1
           - uses: patch
             with:
-              patches: /home/build/int-core-datadog_checks_dev-pyproject-toml.patch /home/build/int-core-mysql-hatch-toml.patch /home/build/int-core-singlestore-hatch-toml.patch /home/build/int-core-agent_requirements-in.patch /home/build/int-core-snowflake-pyproject-toml.patch
+              patches: /home/build/int-core-datadog_checks_dev-pyproject-toml.patch /home/build/int-core-mysql-hatch-toml.patch /home/build/int-core-singlestore-hatch-toml.patch /home/build/int-core-agent_requirements-in.patch
           - runs: |
               # This is needed to work around the error "ValueError: ZIP does not support timestamps before 1980"
               SOURCE_DATE_EPOCH=315532800
@@ -415,9 +410,6 @@ subpackages:
         # This needs CGO_ENABLED=1, which we just so happen to inherit from the
         # main package
         pipeline:
-          - uses: go/bump
-            with:
-              deps: google.golang.org/protobuf@v1.33.0 github.com/golang/protobuf@v1.5.4
           - uses: go/build
             with:
               packages: ./cmd/server
