Revert changes to Python path resolving as they're causing issues
Signed-off-by: Łukasz 'sil2100' Zemczak <lukasz.zemczak@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -96,6 +96,14 @@ pipeline:
       tag: ${{package.version}}
       expected-commit: f2df43696113198633ef6406264ee09f5099c304
 
+  # Recent commit to the init.go code changed some of the logic of Python path resolving
+  # for the embedded Python, causing issues. Let's revert the commit to return to the previous
+  # behavior. This change was introduced for MacOS use-cases, so not relevant to Linux.
+  # https://github.com/DataDog/datadog-agent/pull/31426
+  - uses: patch
+    with:
+      patches: 0001-Revert-Import-python-relatively-instead-of-using-the.patch
+
   - runs: |
       gccdir="$(GCC_SPEC_FILE=/dev/null gcc --print-search-dirs | grep ^install: | cut -d' ' -f2)"
       sed -r 's/,?-z,now//' < "$gccdir/openssf.spec" > /home/build/openssf.spec
