fix update config
Signed-off-by: Mritunjay <mritunjay.sharma@chainguard.dev>

--- a/oath-toolkit.yaml
+++ b/oath-toolkit.yaml
@@ -73,7 +73,6 @@ test:
 
 update:
   enabled: true
-  github:
-    identifier: oath-toolkit/oath-toolkit
+  git:
     strip-prefix: oath-toolkit-
     tag-filter-prefix: oath-toolkit-
