--- a/oath-toolkit.yaml
+++ b/oath-toolkit.yaml
@@ -69,7 +69,30 @@ test:
         - build-base
   pipeline:
     - runs: |
-        make check
+        # Check if oathtool exists
+        if ! command -v oathtool >/dev/null; then
+          echo "oathtool not found"
+          exit 1
+        fi
+
+        # Generate a TOTP
+        secret="JBSWY3DPEHPK3PXP"
+        otp=$(oathtool --totp -b $secret)
+        echo "Generated OTP: $otp"
+
+        # Validate OTP length
+        if [ ${#otp} -ne 6 ]; then
+          echo "OTP length is incorrect"
+          exit 1
+        fi
+
+        # Check if the library is accessible
+        if ! ldconfig -p | grep -q liboath; then
+          echo "liboath not found"
+          exit 1
+        fi
+
+        echo "All tests passed."
 
 update:
   enabled: true
