fix config, version and lint
Signed-off-by: Mritunjay <mritunjay.sharma@chainguard.dev>

--- a/babeltrace-2.yaml
+++ b/babeltrace-2.yaml
@@ -1,6 +1,6 @@
 package:
   name: babeltrace-2
-  version: 2.0.6
+  version: 2.1.0
   epoch: 0
   description: "An open-source trace manipulation toolkit."
   copyright:
@@ -42,15 +42,15 @@ pipeline:
     with:
       repository: https://github.com/efficios/babeltrace.git
       tag: v${{package.version}}
-      expected-commit: 2848997edd14420817fde28e8651fc7d86d15067
+      expected-commit: e61d41ff3c3ac6a123930d4e60cf710ff9ea18e0
 
   - uses: autoconf/configure
     ## We cannot currently build with python bindings because the version of swig has changed how
     ## SWIG_AppendOutput is used. This is a known issue since 4.3.0. If we want to build the python bindings bt2, we would need to
     ## use an older version of swig.
     with:
-    #   opts: |
-    #     --enable-python-bindings:
+      #   opts: |
+      #     --enable-python-bindings:
       opts: |
         --enable-api-doc \
         --enable-python-plugins \
@@ -110,7 +110,10 @@ test:
       with:
         packages: ${{package.name}}
 
+# We will have to use tag here as release is not consistent with latest tags
 update:
   enabled: true
   github:
     identifier: efficios/babeltrace
+    use-tag: true
+    strip-prefix: v
