openssh: transform upstream version to valid APK versions

--- a/openssh.yaml
+++ b/openssh.yaml
@@ -198,6 +198,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 2565
+  version-transform:
+    - match: p
+      replace: _p
 
 test:
   pipeline:
