--- a/openssh.yaml
+++ b/openssh.yaml
@@ -1,6 +1,6 @@
 package:
   name: openssh
-  version: "9.9p2"
+  version: "9.9_p2"
   epoch: 0
   description: "the OpenBSD SSH implementation"
   copyright:
