Make Foundations codeowners for openssl

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -10,3 +10,4 @@ abseil-cpp.yaml      @wolfi-dev/foundations-squad
 ca-certificates.yaml @wolfi-dev/foundations-squad
 glibc.yaml           @wolfi-dev/foundations-squad
 openssh.yaml         @wolfi-dev/foundations-squad
+openssl.yaml         @wolfi-dev/foundations-squad
