samba: Add build-dep on new py3-talloc-dev
talloc-dev no longer provides the pytalloc header file.

Signed-off-by: dann frazier <dann.frazier@chainguard.dev>

--- a/samba.yaml
+++ b/samba.yaml
@@ -41,6 +41,7 @@ environment:
       - popt-dev
       - py3-dnspython
       - py3-markdown
+      - py3-talloc-dev
       - py3-tdb
       - py3-tevent
       - python3-dev
