fix license and tags
Signed-off-by: Mritunjay <mritunjay.sharma@chainguard.dev>

--- a/babeltrace-2.yaml
+++ b/babeltrace-2.yaml
@@ -3,8 +3,10 @@ package:
   version: 2.1.0
   epoch: 0
   description: "An open-source trace manipulation toolkit."
+  # upstream usage of multiple licenses led us to use this here rather
   copyright:
-    - license: MIT
+    - license: LicenseRef-babeltrace-2
+      license-path: LICENSE
   dependencies:
     runtime:
       # needs setuptools for distuils use
@@ -113,6 +115,9 @@ test:
 # We will have to use tag here as release is not consistent with latest tags
 update:
   enabled: true
+  ignore-regex-patterns:
+    - -rc.*
+    - -pre.*
   github:
     identifier: efficios/babeltrace
     use-tag: true
