--- a/jupyter-base-notebook.yaml
+++ b/jupyter-base-notebook.yaml
@@ -16,7 +16,8 @@ environment:
       - py3.12-pip
 
 pipeline:
-  - runs: |
+  - name: Install dependencies
+    runs: |
       mkdir -p ${{targets.contextdir}}/usr/local/bin
       mkdir -p ${{targets.contextdir}}/home/jovyan/.jupyter
       # install jupyterlab, nbclassic and notebook
@@ -29,6 +30,10 @@ pipeline:
       jupyter server --generate-config
       cp /home/build/.jupyter/jupyter_server_config.py ${{targets.contextdir}}/home/jovyan/.jupyter/jupyter_server_config.py
       jupyter lab clean
+  - name: Remove unused files causing false positives for vulnerabilities
+    runs: |
+      rm -fR ${{targets.contextdir}}/usr/lib/python*/site-packages/psutil/tests/test_windows*
+      rm -fR ${{targets.contextdir}}/usr/lib/python*/site-packages/psutil/tests/__pycache__/test_windows*
 
 test:
   environment:
