--- a/samba.yaml
+++ b/samba.yaml
@@ -6,6 +6,9 @@ package:
   copyright:
     - license: GPL-3.0-or-later AND LGPL-3.0-or-later
 
+vars:
+  py-version: 3.13
+
 environment:
   contents:
     packages:
@@ -39,11 +42,11 @@ environment:
       - perl-parse-yapp
       - pkgconf-dev
       - popt-dev
-      - py3-dnspython
-      - py3-markdown
-      - py3-talloc-dev
-      - py3-tdb
-      - py3-tevent
+      - py${{vars.py-version}}-dnspython
+      - py${{vars.py-version}}-markdown
+      - py${{vars.py-version}}-talloc-dev
+      - py${{vars.py-version}}-tdb
+      - py${{vars.py-version}}-tevent
       - python3-dev
       - rpcgen
       - subunit-dev
@@ -346,7 +349,7 @@ subpackages:
             eventlogadm --help
             nmbd --help
 
-  - name: py3-samba
+  - name: py${{vars.py-version}}-samba
     description: Samba python libraries
     pipeline:
       - runs: |
@@ -354,7 +357,9 @@ subpackages:
           mv "${{targets.destdir}}"/usr/lib/python* "${{targets.contextdir}}"/usr/lib
     dependencies:
       runtime:
-        - py3-tdb
+        - py${{vars.py-version}}-tdb
+      provides:
+        - py3-samba
 
   - name: samba-test
     description: Samba server and client testing tools
@@ -373,7 +378,7 @@ subpackages:
           mv "${{targets.destdir}}"/usr/lib/samba/libtorture-private-samba.so "${{targets.contextdir}}"/usr/lib
     dependencies:
       runtime:
-        - py3-tdb
+        - py${{vars.py-version}}-tdb
     test:
       pipeline:
         - runs: |
