add missing scripts in the entrypoint folder
Signed-off-by: Batuhan Apaydin <batuhan.apaydin@chainguard.dev>

--- a/docker-nginx.yaml
+++ b/docker-nginx.yaml
@@ -1,7 +1,7 @@
 package:
   name: docker-nginx
   version: 1.27.3
-  epoch: 0
+  epoch: 1
   description: NGINX Dockerfiles
   copyright:
     - license: BSD-2-Clause
@@ -24,8 +24,8 @@ pipeline:
 
   - runs: |
       mkdir -p "${{targets.contextdir}}/docker-entrypoint.d/"
-      cp entrypoint/20-envsubst-on-templates.sh "${{targets.contextdir}}/docker-entrypoint.d/"
       cp entrypoint/docker-entrypoint.sh "${{targets.contextdir}}/docker-entrypoint.sh"
+      cp -r entrypoint/* "${{targets.contextdir}}/docker-entrypoint.d/"
 
 update:
   enabled: true
@@ -37,5 +37,8 @@ test:
   pipeline:
     - name: "Check expected scripts exist"
       runs: |
-        stat /docker-entrypoint.d/20-envsubst-on-templates.sh
         stat /docker-entrypoint.sh
+        stat /docker-entrypoint.d/10-listen-on-ipv6-by-default.sh
+        stat /docker-entrypoint.d/15-local-resolvers.envsh
+        stat /docker-entrypoint.d/20-envsubst-on-templates.sh
+        stat /docker-entrypoint.d/30-tune-worker-processes.sh
