samba libs: Add test/emptypackage to new metapackages
Signed-off-by: dann frazier <dann.frazier@chainguard.dev>

--- a/talloc.yaml
+++ b/talloc.yaml
@@ -165,6 +165,7 @@ subpackages:
         - py3.13-${{vars.pypi-package}}
     test:
       pipeline:
+        - uses: test/emptypackage
         - uses: python/import
           with:
             python: python3.10
@@ -190,6 +191,9 @@ subpackages:
         - py3.11-${{vars.pypi-package}}-dev
         - py3.12-${{vars.pypi-package}}-dev
         - py3.13-${{vars.pypi-package}}-dev
+    test:
+      pipeline:
+        - uses: test/emptypackage
 
 update:
   enabled: true
