--- a/tdb.yaml
+++ b/tdb.yaml
@@ -91,6 +91,7 @@ subpackages:
         - py3.13-${{vars.pypi-package}}
     test:
       pipeline:
+        - uses: test/emptypackage
         - uses: python/import
           with:
             python: python3.10
