--- a/ldb.yaml
+++ b/ldb.yaml
@@ -170,6 +170,7 @@ subpackages:
         - py3.13-${{vars.pypi-package}}
     test:
       pipeline:
+        - uses: test/emptypackage
         - uses: python/import
           with:
             python: python3.10
