Added more tests to datadog

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -576,10 +576,24 @@ test:
       runs: |
         PATH=$mypath:$PATH
         ls ${{vars.destd}}/requirements-agent-release.txt
-    - name: Ensure the agent integration subcommand works
+    - name: Ensure the agent integration subcommand works on a basic level
       runs: |
         PATH=$mypath:$PATH
         agent integration freeze >/dev/null
+    - name: Ensure the agent integration subcommand works using useSysPython
+      runs: |
+        PATH=$mypath:$PATH
+        agent integration freeze -p >/dev/null
+    - name: Ensure the agent integration subcommand works with removals and installations
+      runs: |
+        PATH=$mypath:$PATH
+
+        # Gather current version of datadog-zk
+        ZKVERSION=$(agent integration freeze -p | awk -F '==' '/datadog-zk/ {print $2}')
+
+        # --allow-root required to solve "Error: operation is disabled for root user. Please run this tool with the agent-running user or add '--allow-root/-r' to force"
+        agent integration remove --allow-root datadog-zk
+        agent integration install --allow-root datadog-zk==$ZKVERSION
     - name: Ensure checks can be loaded (base)
       uses: python/import
       with:
@@ -613,6 +627,7 @@ test:
 
         export DD_LOG_LEVEL=debug
         export DD_HOSTNAME_FILE=/etc/hostname
+
         agent check uptime
         agent check disk
     - name: Validate multicall components are correctly linked
