chore(llvm): Restore CMake macros
Still needed by OpenMP

Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/llvm.yaml
+++ b/llvm.yaml
@@ -584,6 +584,18 @@ subpackages:
           mv ${{targets.destdir}}/${{vars.llvm-prefix}}/include/*unwind* ${{targets.contextdir}}/usr/include/
           mv ${{targets.destdir}}/${{vars.llvm-prefix}}/include/mach-o/*unwind* ${{targets.contextdir}}/usr/include/mach-o/
 
+  - name: ${{package.name}}-cmake
+    description: CMake macros for LLVM ${{vars.major-version}}
+    dependencies:
+      provides:
+        - ${{package.name}}-cmake-${{vars.major-version}}=${{package.full-version}}
+      runtime:
+        - cmake
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.contextdir}}/${{vars.llvm-prefix}}/share/cmake/Modules
+          cp -r ./cmake/Modules/* ${{targets.contextdir}}/${{vars.llvm-prefix}}/share/cmake/Modules/
+
   - name: ${{package.name}}-dev
     description: Development headers for LLVM ${{vars.major-version}}
     dependencies:
