--- a/llvm17.yaml
+++ b/llvm17.yaml
@@ -369,6 +369,16 @@ subpackages:
             clang-pseudo --version
             clang-pseudo --help
 
+  - name: llvm-cmake-${{vars.major-version}}
+    description: CMake macros for LLVM ${{vars.major-version}}
+    dependencies:
+      runtime:
+        - cmake
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.contextdir}}/${{vars.llvm-prefix}}/share/cmake/Modules                             
+          cp -r ./cmake/Modules/* ${{targets.contextdir}}/${{vars.llvm-prefix}}/share/cmake/Modules/
+
   - name: ${{package.name}}-dev
     description: Development headers for LLVM ${{vars.major-version}}
     dependencies:
