glibc: Add /etc/ld.so.conf.d/ support
Signed-off-by: dann frazier <dann.frazier@chainguard.dev>

--- a/glibc.yaml
+++ b/glibc.yaml
@@ -123,7 +123,10 @@ pipeline:
 
   - name: "Set up ldconfig"
     runs: |
-      cp vendor/ld.so.conf "${{targets.destdir}}"/etc/ld.so.conf
+      mkdir -p "${{targets.destdir}}"/etc
+      cp vendor/ld.so.conf "${{targets.destdir}}"/etc
+      mkdir -p "${{targets.destdir}}"/etc/ld.so.conf.d
+      cp vendor/ld.so.conf.d/*.conf "${{targets.destdir}}"/etc/ld.so.conf.d
 
   - name: 'Clean up documentation'
     runs: |
