fix(llvm17): Filter for aarch64
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/llvm17.yaml
+++ b/llvm17.yaml
@@ -52,7 +52,7 @@ pipeline:
 
   - runs: |
       # https://github.com/llvm/llvm-project/issues/78691
-      if [ "${{build.arch}}" = "arm64" ]; then
+      if [ "${{build.arch}}" = "aarch64" ]; then
         gcc_version="-13"
       fi
 
