--- a/wildfly/pombump-deps.yaml
+++ b/wildfly/pombump-deps.yaml
@@ -1,7 +1,7 @@
 patches:
     - groupId: io.netty
       artifactId: netty-common
-      version: 4.1.118
+      version: 4.1.118.Final
     - groupId: commons-io
       artifactId: commons-io
       version: 2.14.0
