fix(clang-18): Correct runtime deps
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/llvm-18.yaml
+++ b/llvm-18.yaml
@@ -286,9 +286,9 @@ subpackages:
       runtime:
         - gcc
         - glibc-dev
-        - libLLVM
-        - libclang-cpp
-        - llvm
+        - libLLVM-${{vars.major-version}}
+        - libclang-cpp-${{vars.major-version}}
+        - llvm-${{vars.major-version}}
         - openssf-compiler-options
     pipeline:
       - runs: |
