chore(bun): Rebuild with latest LLVM 18 changes
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/bun.yaml
+++ b/bun.yaml
@@ -1,7 +1,7 @@
 package:
   name: bun
   version: "1.2.2"
-  epoch: 0
+  epoch: 1
   description: "Incredibly fast JavaScript runtime, bundler, test runner, and package manager - all in one"
   copyright:
     - license: MIT
@@ -21,7 +21,6 @@ environment:
       - c-ares-dev
       - ccache
       - clang-18
-      - clang-18-dev
       - cmake
       - coreutils
       - curl
@@ -32,8 +31,8 @@ environment:
       - icu-dev
       - libarchive-dev
       - libtool
+      - lld
       - llvm-18-dev
-      - llvm-lld-18-dev
       - m4
       - mimalloc2-dev
       - nodejs
