fix(llvm): Correct symlink to CMake headers
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/llvm16.yaml
+++ b/llvm16.yaml
@@ -99,7 +99,7 @@ pipeline:
 
   - runs: |
       mkdir -p ${{targets.contextdir}}/usr/lib/cmake
-      ln -s ${{vars.llvm-prefix}}/lib/cmake/llvm${{vars.major-version}} ${{targets.contextdir}}/usr/lib/cmake/llvm
+      ln -s ${{vars.llvm-prefix}}/lib/cmake/llvm ${{targets.contextdir}}/usr/lib/cmake/llvm
 
   - uses: strip
 
@@ -512,8 +512,6 @@ test:
         llvm-otool --help
         llvm-pdbutil --version
         llvm-pdbutil --help
-        llvm-profdata --version
-        llvm-profdata --help
         llvm-profgen --version
         llvm-profgen --help
         llvm-ranlib --version
