--- a/llvm17.yaml
+++ b/llvm17.yaml
@@ -107,7 +107,7 @@ pipeline:
 
   - runs: |
       mkdir -p ${{targets.contextdir}}/usr/lib/cmake
-      ln -s ${{vars.llvm-prefix}}/lib/cmake/llvm${{vars.major-version}} ${{targets.contextdir}}/usr/lib/cmake/llvm
+      ln -s ${{vars.llvm-prefix}}/lib/cmake/llvm ${{targets.contextdir}}/usr/lib/cmake/llvm
 
   - uses: strip
 
