--- a/llvm15.yaml
+++ b/llvm15.yaml
@@ -103,7 +103,7 @@ pipeline:
 
   - runs: |
       mkdir -p ${{targets.contextdir}}/usr/lib/cmake
-      ln -s ${{vars.llvm-prefix}}/lib/cmake/llvm15 ${{targets.contextdir}}/usr/lib/cmake/llvm
+      ln -s ${{vars.llvm-prefix}}/lib/cmake/llvm ${{targets.contextdir}}/usr/lib/cmake/llvm
 
   - uses: strip
 
