refactor: fips package The upstream tags are v-prefixed using verbatim tag name here, rather than adding the v-prefix in each place it's used.
This also means if they stop v-prefixing in future, we don't have to update any code.
Update the test so that it can test it properly and grep without the v prefix

Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/gitlab-runner-17.8.yaml
+++ b/gitlab-runner-17.8.yaml
@@ -1,5 +1,5 @@
 vars:
-  docker-machine-tag: 0.16.2-gitlab.31
+  docker-machine-tag: v0.16.2-gitlab.31
   docker-machine-commit: 115286f8c18fc5ebb2181bb56a04ae23eef40135
   base-images-tag: 0.0.4
   base-images-commit: 447dbe49323fc5d5b0f4fe08d54f557b5b5e90fe
@@ -14,7 +14,7 @@ package:
   name: gitlab-runner-17.8
   # ---Additional updates required--- Review 'vars' section (above), when reviewing version bumps.
   version: 17.8.3
-  epoch: 1
+  epoch: 2
   description: GitLab Runner is the open source project that is used to run your CI/CD jobs and send the results back to GitLab
   copyright:
     - license: MIT
@@ -61,7 +61,7 @@ pipeline:
 
       DOCKER_MACHINE_VERSION=$(sed -n 's/.*DOCKER_MACHINE_VERSION *= *"\([^"]*\)".*/\1/p' ./base-images/dockerfiles/runner/docker-bake.hcl)
 
-      if [ "v${{vars.docker-machine-tag}}" != "${DOCKER_MACHINE_VERSION}" ]; then
+      if [ "${{vars.docker-machine-tag}}" != "${DOCKER_MACHINE_VERSION}" ]; then
         echo "Expected DOCKER_MACHINE_VERSION: ${{vars.docker-machine-tag}} but got: $DOCKER_MACHINE_VERSION"
         exit 1
       fi
@@ -69,7 +69,7 @@ pipeline:
   - uses: git-checkout
     with:
       repository: https://gitlab.com/gitlab-org/ci-cd/docker-machine
-      tag: v${{vars.docker-machine-tag}}
+      tag: ${{vars.docker-machine-tag}}
       expected-commit: ${{vars.docker-machine-commit}}
       destination: ./machine
 
@@ -146,7 +146,8 @@ subpackages:
     test:
       pipeline:
         - runs: |
-            docker-machine -v | grep ${{vars.docker-machine-tag}}
+            DOCKER_MACHINE_VERSION=$(echo ${{vars.docker-machine-tag}} | sed 's/^v//')
+            docker-machine -v | grep $DOCKER_MACHINE_VERSION
             docker-machine -h
 
 update:
