let's try generate conf files
Signed-off-by: Batuhan Apaydin <batuhan.apaydin@chainguard.dev>

--- a/font-noto.yaml
+++ b/font-noto.yaml
@@ -5,8 +5,6 @@ package:
   description: Noto fonts
   dependencies:
     runtime:
-      - font-noto-sans-math
-      - font-noto-sans-symbols
       - fontconfig
   copyright:
     - license: Apache-2.0
@@ -15,213 +13,121 @@ environment:
   contents:
     packages:
       - busybox
+      - jq
+      - ruby
 
 data:
-  - name: fonts
+  - name: subpkgs
     items:
-      NotoFangsongKSSRotated: fangsongkssrotated
-      NotoFangsongKSSVertical: fangsongkssvertical
-      NotoKufiArabic: kufiarabic
-      NotoMusic: music
-      NotoNaskhArabic: naskharabic
-      NotoNaskhArabicUI: naskharabicui
-      NotoNastaliqUrdu: nastaliqurdu
-      NotoRashiHebrew: rashihebrew
-      NotoSans: sans
-      NotoSansAdlam: sans-adlam
-      NotoSansAdlamUnjoined: sans-adlamunjoined
-      NotoSansAnatolianHieroglyphs: sans-anatolianhieroglyphs
-      NotoSansArabic: sans-arabic
-      NotoSansArabicUI: sans-arabicui
-      NotoSansArmenian: sans-armenian
-      NotoSansAvestan: sans-avestan
-      NotoSansBalinese: sans-balinese
-      NotoSansBamum: sans-bamum
-      NotoSansBassaVah: sans-bassavah
-      NotoSansBatak: sans-batak
-      NotoSansBengali: sans-bengali
-      NotoSansBhaiksuki: sans-bhaiksuki
-      NotoSansBrahmi: sans-brahmi
-      NotoSansBuginese: sans-buginese
-      NotoSansBuhid: sans-buhid
-      NotoSansCanadianAboriginal: sans-canadianaboriginal
-      NotoSansCarian: sans-carian
-      NotoSansCaucasianAlbanian: sans-caucasianalbanian
-      NotoSansChakma: sans-chakma
-      NotoSansCham: sans-cham
-      NotoSansCherokee: sans-cherokee
-      NotoSansChorasmian: sans-chorasmian
-      NotoSansCoptic: sans-coptic
-      NotoSansCuneiform: sans-cuneiform
-      NotoSansCypriot: sans-cypriot
-      NotoSansCyproMinoan: sans-cyprominoan
-      NotoSansDeseret: sans-deseret
-      NotoSansDevanagari: sans-devanagari
-      NotoSansDuployan: sans-duployan
-      NotoSansEgyptianHieroglyphs: sans-egyptianhieroglyphs
-      NotoSansElbasan: sans-elbasan
-      NotoSansElymaic: sans-elymaic
-      NotoSansEthiopic: sans-ethiopic
-      NotoSansGeorgian: sans-georgian
-      NotoSansGlagolitic: sans-glagolitic
-      NotoSansGothic: sans-gothic
-      NotoSansGrantha: sans-grantha
-      NotoSansGujarati: sans-gujarati
-      NotoSansGunjalaGondi: sans-gunjalagondi
-      NotoSansGurmukhi: sans-gurmukhi
-      NotoSansHanifiRohingya: sans-hanifirohingya
-      NotoSansHanunoo: sans-hanunoo
-      NotoSansHatran: sans-hatran
-      NotoSansHebrew: sans-hebrew
-      NotoSansImperialAramaic: sans-imperialaramaic
-      NotoSansIndicSiyaqNumbers: sans-indicsiyaqnumbers
-      NotoSansInscriptionalPahlavi: sans-inscriptionalpahlavi
-      NotoSansInscriptionalParthian: sans-inscriptionalparthian
-      NotoSansJavanese: sans-javanese
-      NotoSansKaithi: sans-kaithi
-      NotoSansKannada: sans-kannada
-      NotoSansKawi: sans-kawi
-      NotoSansKayahLi: sans-kayahli
-      NotoSansKharoshthi: sans-kharoshthi
-      NotoSansKhmer: sans-khmer
-      NotoSansKhojki: sans-khojki
-      NotoSansKhudawadi: sans-khudawadi
-      NotoSansLao: sans-lao
-      NotoSansLaoLooped: sans-laolooped
-      NotoSansLepcha: sans-lepcha
-      NotoSansLimbu: sans-limbu
-      NotoSansLinearA: sans-lineara
-      NotoSansLinearB: sans-linearb
-      NotoSansLisu: sans-lisu
-      NotoSansLycian: sans-lycian
-      NotoSansLydian: sans-lydian
-      NotoSansMahajani: sans-mahajani
-      NotoSansMalayalam: sans-malayalam
-      NotoSansMandaic: sans-mandaic
-      NotoSansManichaean: sans-manichaean
-      NotoSansMarchen: sans-marchen
-      NotoSansMasaramGondi: sans-masaramgondi
-      NotoSansMath: sans-math
-      NotoSansMayanNumerals: sans-mayannumerals
-      NotoSansMedefaidrin: sans-medefaidrin
-      NotoSansMeeteiMayek: sans-meeteimayek
-      NotoSansMendeKikakui: sans-mendekikakui
-      NotoSansMeroitic: sans-meroitic
-      NotoSansMiao: sans-miao
-      NotoSansModi: sans-modi
-      NotoSansMongolian: sans-mongolian
-      NotoSansMono: sans-mono
-      NotoSansMro: sans-mro
-      NotoSansMultani: sans-multani
-      NotoSansMyanmar: sans-myanmar
-      NotoSansNKo: sans-nko
-      NotoSansNKoUnjoined: sans-nkounjoined
-      NotoSansNabataean: sans-nabataean
-      NotoSansNagMundari: sans-nagmundari
-      NotoSansNandinagari: sans-nandinagari
-      NotoSansNewTaiLue: sans-newtailue
-      NotoSansNewa: sans-newa
-      NotoSansNushu: sans-nushu
-      NotoSansOgham: sans-ogham
-      NotoSansOlChiki: sans-olchiki
-      NotoSansOldHungarian: sans-oldhungarian
-      NotoSansOldItalic: sans-olditalic
-      NotoSansOldNorthArabian: sans-oldnortharabian
-      NotoSansOldPermic: sans-oldpermic
-      NotoSansOldPersian: sans-oldpersian
-      NotoSansOldSogdian: sans-oldsogdian
-      NotoSansOldSouthArabian: sans-oldsoutharabian
-      NotoSansOldTurkic: sans-oldturkic
-      NotoSansOriya: sans-oriya
-      NotoSansOsage: sans-osage
-      NotoSansOsmanya: sans-osmanya
-      NotoSansPahawhHmong: sans-pahawhhmong
-      NotoSansPalmyrene: sans-palmyrene
-      NotoSansPauCinHau: sans-paucinhau
-      NotoSansPhagsPa: sans-phagspa
-      NotoSansPhoenician: sans-phoenician
-      NotoSansPsalterPahlavi: sans-psalterpahlavi
-      NotoSansRejang: sans-rejang
-      NotoSansRunic: sans-runic
-      NotoSansSamaritan: sans-samaritan
-      NotoSansSaurashtra: sans-saurashtra
-      NotoSansSharada: sans-sharada
-      NotoSansShavian: sans-shavian
-      NotoSansSiddham: sans-siddham
-      NotoSansSignWriting: sans-signwriting
-      NotoSansSinhala: sans-sinhala
-      NotoSansSogdian: sans-sogdian
-      NotoSansSoraSompeng: sans-sorasompeng
-      NotoSansSoyombo: sans-soyombo
-      NotoSansSundanese: sans-sundanese
-      NotoSansSylotiNagri: sans-sylotinagri
-      NotoSansSymbols: sans-symbols
-      NotoSansSymbols2: sans-symbols2
-      NotoSansSyriac: sans-syriac
-      NotoSansSyriacEastern: sans-syriaceastern
-      NotoSansSyriacWestern: sans-syriacwestern
-      NotoSansTagalog: sans-tagalog
-      NotoSansTagbanwa: sans-tagbanwa
-      NotoSansTaiLe: sans-taile
-      NotoSansTaiTham: sans-taitham
-      NotoSansTaiViet: sans-taiviet
-      NotoSansTakri: sans-takri
-      NotoSansTamil: sans-tamil
-      NotoSansTamilSupplement: sans-tamilsupplement
-      NotoSansTangsa: sans-tangsa
-      NotoSansTelugu: sans-telugu
-      NotoSansTest: sans-test
-      NotoSansThaana: sans-thaana
-      NotoSansThai: sans-thai
-      NotoSansThaiLooped: sans-thailooped
-      NotoSansTifinagh: sans-tifinagh
-      NotoSansTirhuta: sans-tirhuta
-      NotoSansUgaritic: sans-ugaritic
-      NotoSansVai: sans-vai
-      NotoSansVithkuqi: sans-vithkuqi
-      NotoSansWancho: sans-wancho
-      NotoSansWarangCiti: sans-warangciti
-      NotoSansYi: sans-yi
-      NotoSansZanabazarSquare: sans-zanabazarsquare
-      NotoSerif: serif
-      NotoSerifAhom: serif-ahom
-      NotoSerifArmenian: serif-armenian
-      NotoSerifBalinese: serif-balinese
-      NotoSerifBengali: serif-bengali
-      NotoSerifDevanagari: serif-devanagari
-      NotoSerifDisplay: serif-display
-      NotoSerifDivesAkuru: serif-divesakuru
-      NotoSerifDogra: serif-dogra
-      NotoSerifEthiopic: serif-ethiopic
-      NotoSerifGeorgian: serif-georgian
-      NotoSerifGrantha: serif-grantha
-      NotoSerifGujarati: serif-gujarati
-      NotoSerifGurmukhi: serif-gurmukhi
-      NotoSerifHebrew: serif-hebrew
-      NotoSerifKannada: serif-kannada
-      NotoSerifKhitanSmallScript: serif-khitansmallscript
-      NotoSerifKhmer: serif-khmer
-      NotoSerifKhojki: serif-khojki
-      NotoSerifLao: serif-lao
-      NotoSerifMakasar: serif-makasar
-      NotoSerifMalayalam: serif-malayalam
-      NotoSerifMyanmar: serif-myanmar
-      NotoSerifNPHmong: serif-nphmong
-      NotoSerifOldUyghur: serif-olduyghur
-      NotoSerifOriya: serif-oriya
-      NotoSerifOttomanSiyaq: serif-ottomansiyaq
-      NotoSerifSinhala: serif-sinhala
-      NotoSerifTamil: serif-tamil
-      NotoSerifTangut: serif-tangut
-      NotoSerifTelugu: serif-telugu
-      NotoSerifTest: serif-test
-      NotoSerifThai: serif-thai
-      NotoSerifTibetan: serif-tibetan
-      NotoSerifToto: serif-toto
-      NotoSerifVithkuqi: serif-vithkuqi
-      NotoSerifYezidi: serif-yezidi
-      NotoTraditionalNushu: traditionalnushu
-      NotoZnamennyMusicalNotation: znamennymusicalnotation
+      nyiakeng-puachue-hmong:
+      canadian-aboriginal:
+      indic-siyaq-numbers:
+      khitan-small-script:
+      hanifi-rohingya:
+      mayan-numerals:
+      gunjala-gondi:
+      masaram-gondi:
+      mende-kikakui:
+      nastaliq-urdu:
+      ottoman-siyaq:
+      cypro-minoan:
+      meetei-mayek:
+      naskh-arabic:
+      pahawh-hmong:
+      rashi-hebrew:
+      sora-sompeng:
+      syloti-nagri:
+      dives-akuru:
+      kufi-arabic:
+      medefaidrin:
+      nag-mundari:
+      nandinagari:
+      new-tai-lue:
+      pau-cin-hau:
+      signwriting:
+      warang-citi:
+      chorasmian:
+      devanagari:
+      historical:
+      old-uyghur:
+      saurashtra:
+      bassa-vah:
+      malayalam:
+      mongolian:
+      samaritan:
+      sundanese:
+      armenian:
+      balinese:
+      buginese:
+      cherokee:
+      duployan:
+      ethiopic:
+      fangsong:
+      georgian:
+      gujarati:
+      gurmukhi:
+      javanese:
+      kayah-li:
+      ol-chiki:
+      tagbanwa:
+      tifinagh:
+      vithkuqi:
+      znamenny:
+      bengali:
+      elbasan:
+      grantha:
+      hanunoo:
+      kannada:
+      makasar:
+      myanmar:
+      sharada:
+      sinhala:
+      soyombo:
+      symbols:
+      tibetan:
+      tirhuta:
+      arabic:
+      chakma:
+      coptic:
+      hebrew:
+      kaithi:
+      khojki:
+      lepcha:
+      rejang:
+      syriac:
+      tangsa:
+      telugu:
+      thaana:
+      wancho:
+      yezidi:
+      adlam:
+      bamum:
+      batak:
+      buhid:
+      khmer:
+      limbu:
+      music:
+      nushu:
+      oriya:
+      osage:
+      tamil:
+      ahom:
+      cham:
+      kawi:
+      lisu:
+      math:
+      miao:
+      modi:
+      newa:
+      test:
+      thai:
+      toto:
+      lao:
+      mro:
+      nko:
+      tai:
+      vai:
+      yi:
 
 pipeline:
   - uses: git-checkout
@@ -230,16 +136,65 @@ pipeline:
       repository: https://github.com/notofonts/notofonts.github.io
       tag: noto-monthly-release-${{package.version}}
 
+  - runs: |
+      mkdir -p conf.d
+      ./noto-meta gen-font-confs conf.d/
+      mkdir -p ${{targets.contextdir}}/etc/fonts/conf.avail/
+      mkdir -p ${{targets.contextdir}}/usr/share/fonts/noto/
+      cp fonts/*/hinted/ttf/*.ttf ${{targets.contextdir}}/usr/share/fonts/noto/
+      cp conf.d/*.conf ${{targets.contextdir}}/etc/fonts/conf.avail/
+      mkdir -p ${{targets.contextdir}}/etc/fonts/conf.d
+      for f in "${{targets.destdir}}/etc/fonts/conf.avail/"*.conf; do
+        full_filename=$(basename "$f")
+        ln -s /etc/fonts/conf.avail/$full_filename ${{targets.contextdir}}/etc/fonts/conf.d/$full_filename
+      done
+
 subpackages:
-  - range: fonts
-    name: ${{package.name}}-${{range.value}}
+  - name: ${{package.name}}-common
+    description: Common files for Noto font families
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.contextdir}}/etc/fonts/conf.avail
+          mkdir -p ${{targets.contextdir}}/etc/fonts/conf.d
+          cp conf.d/58-noto.conf ${{targets.contextdir}}/etc/fonts/conf.avail/58-noto.conf
+          cp conf.d/58-noto.conf ${{targets.contextdir}}/etc/fonts/conf.d/58-noto.conf
+          ln -sf /etc/fonts/conf.avail/58-noto.conf ${{targets.contextdir}}/etc/fonts/conf.d/58-noto.conf
+
+  - range: subpkgs
+    name: ${{package.name}}-${{range.key}}
+    dependencies:
+      runtime:
+        - ${{package.name}}-common
+        - fontconfig
     description: ${{range.key}} font package
     pipeline:
       - runs: |
-          mkdir -p "${{targets.contextdir}}"/usr/share/fonts/noto
-          find ./fonts/${{range.key}}/hinted -name "*.ttf" -exec install -Dm644 {} \
-          	-t "${{targets.contextdir}}"/usr/share/fonts/noto/ \;
-      - uses: strip
+          mkdir -p ${{targets.contextdir}}/usr/share/fonts/noto
+
+          for font in $(./noto-meta font-basenames "${{range.key}}"); do
+            find "${{targets.destdir}}/usr/share/fonts/" -name "$font-*.ttf" -exec cp {} "${{targets.contextdir}}/usr/share/fonts/" \;
+          done
+
+          # Create directories for font configuration
+          mkdir -p "${{targets.contextdir}}/etc/fonts/conf.d/"
+          mkdir -p "${{targets.contextdir}}/etc/fonts/conf.avail/"
+
+          # Process the configuration files
+          for f in "${{targets.destdir}}/etc/fonts/conf.avail/"*.conf; do
+              full_filename=$(basename "$f")
+              font_name=$(echo "$full_filename" | sed -E 's/^[^-]+-[^-]+-([^.]+)\.conf/\1/')
+
+              # Only continue if the font name matches the basename
+              if [ "${{range.key}}" != "$font_name" ]; then
+                  continue
+              fi
+
+              # Copy the config file to the context directory
+              cp "${{targets.destdir}}/etc/fonts/conf.avail/$full_filename" "${{targets.contextdir}}/etc/fonts/conf.avail/$full_filename"
+
+              # Create a symbolic link for the config file
+              ln -s "/etc/fonts/conf.avail/$full_filename" "${{targets.contextdir}}/etc/fonts/conf.d/$full_filename"
+          done
     test:
       environment:
         contents:
