--- a/hydra.yaml
+++ b/hydra.yaml
@@ -23,18 +23,8 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: ee8c339ddada3a42529c0416897abc32bad03bbb
 
-  # - uses: go/install
-  #   with:
-  #     package: .
-  #     ldflags: -s -w -X 'github.com/ory/hydra/cmd.Version=${{package.version}}' -X 'github.com/ory/hydra/cmd.Commit=${EXPECTED_COMMIT}' -X 'github.com/ory/hydra/cmd.Date=$(date -u +%Y-%m-%dT%H:%M:%SZ)'
-  #     tags: sqlite,json1,hsm
   - runs: |
-      go install -tags sqlite,json1,hsm \
-        -ldflags "-s -w \
-        -X github.com/ory/hydra/cmd.Version=${PACKAGE_VERSION} \
-        -X github.com/ory/hydra/cmd.Commit=${EXPECTED_COMMIT} \
-        -X github.com/ory/hydra/cmd.Date=$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
-        .
+      go install -tags sqlite,json1,hsm .
 
   - runs: |
       mkdir -p "${{targets.destdir}}/usr/local/bin"
