--- a/wildfly.yaml
+++ b/wildfly.yaml
@@ -5,6 +5,11 @@ package:
   description: WildFly Application Server
   copyright:
     - license: Apache-2.0
+  dependencies:
+    runtime:
+      - bash-binsh
+      - coreutils
+      - curl
 
 data:
   - name: openjdk-versions
@@ -18,7 +23,6 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - curl
       - maven
       - openjdk-17
       - openjdk-21
