--- a/dumb-init.yaml
+++ b/dumb-init.yaml
@@ -1,7 +1,7 @@
 package:
   name: dumb-init
   version: 1.2.5
-  epoch: 4
+  epoch: 5
   description: "minimal init system for Linux containers"
   copyright:
     - license: MIT
@@ -24,9 +24,33 @@ pipeline:
   - uses: autoconf/make
 
   - runs: |
-      install -sD -m 755 dumb-init "${{targets.destdir}}"/usr/bin/dumb-init
+      install -sD -m 755 dumb-init ${{targets.destdir}}/usr/bin/dumb-init
 
   - uses: strip
+
+subpackages:
+  - name: ${{package.name}}-privileged-netbindservice
+    description: "Allows to bind to ports less than 1024"
+    options:
+      no-depends: true
+      no-provides: true
+    pipeline:
+      - runs: |
+          mkdir -p "${{targets.contextdir}}/usr/bin"
+          cp "${{targets.destdir}}/usr/bin/dumb-init" "${{targets.contextdir}}/usr/bin/"
+          setcap cap_net_bind_service=+ep "${{targets.contextdir}}/usr/bin/dumb-init" \
+          && setcap -v cap_net_bind_service=+ep "${{targets.contextdir}}/usr/bin/dumb-init"
+    test:
+      environment:
+        contents:
+          packages:
+            - libcap-utils
+      pipeline:
+        - runs: |
+            stat "/usr/bin/dumb-init"
+        - name: Test file capabilities
+          runs: |
+            getcap /usr/bin/dumb-init | grep -q -E 'cap_net_bind_service=ep'
 
 update:
   enabled: true
