add libcap-utils to deps
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/dumb-init.yaml
+++ b/dumb-init.yaml
@@ -13,6 +13,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - libcap-utils
 
 pipeline:
   - uses: git-checkout
@@ -34,6 +35,9 @@ subpackages:
     options:
       no-depends: true
       no-provides: true
+    dependencies:
+      runtime:
+        - ${{package.name}}
     pipeline:
       - runs: |
           mkdir -p "${{targets.contextdir}}/usr/bin"
