refactor the update block to use git instead of release monitoring
Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/bind.yaml
+++ b/bind.yaml
@@ -37,7 +37,7 @@ pipeline:
     with:
       repository: https://gitlab.isc.org/isc-projects/bind9.git
       tag: v${{package.version}}
-      expected-commit: 6fc161b582407309ff47a50ba10915bdd66eb2be
+      expected-commit: d8c38c95b66a71134cf86ebfd80e1b2cb819e02f
 
   - runs: |
       autoreconf -fi
@@ -240,5 +240,5 @@ subpackages:
 
 update:
   enabled: true
-  release-monitor:
-    identifier: 242117
+  git:
+    strip-prefix: v
