--- a/dumb-init.yaml
+++ b/dumb-init.yaml
@@ -38,8 +38,7 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.contextdir}}/usr/bin"
           cp "${{targets.destdir}}/usr/bin/dumb-init" "${{targets.contextdir}}/usr/bin/"
-          setcap cap_net_bind_service=+ep "${{targets.contextdir}}/usr/bin/dumb-init" \
-          && setcap -v cap_net_bind_service=+ep "${{targets.contextdir}}/usr/bin/dumb-init"
+          setcap cap_net_bind_service=+ep "${{targets.contextdir}}/usr/bin/dumb-init"
     test:
       pipeline:
         - runs: |
