zfs - usrmerge-sbin

--- a/zfs.yaml
+++ b/zfs.yaml
@@ -53,6 +53,10 @@ pipeline:
   - uses: autoconf/make-install
 
   - runs: |
+      mv ${{targets.destdir}}/sbin/mount.zfs ${{targets.destdir}}/usr/bin/
+      rmdir ${{targets.destdir}}/sbin
+
+  - runs: |
       rm -rf "${{targets.destdir}}"/usr/share/initramfs-tools
 
   - uses: strip
