--- a/hydra.yaml
+++ b/hydra.yaml
@@ -23,8 +23,11 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: ee8c339ddada3a42529c0416897abc32bad03bbb
 
-  - runs: |
-      go install -tags sqlite,json1,hsm .
+  - uses: go/install
+    with:
+      package: .
+      ldflags: -X 'github.com/ory/hydra/v2/driver/config.Version=$(git describe --abbrev=0 --tags)' -X 'github.com/ory/hydra/v2/driver/config.Date=$(TZ=UTC date -u "+%Y-%m-%dT%H:%M:%SZ")' -X 'github.com/ory/hydra/v2/driver/config.Commit=$(git rev-parse HEAD)'
+      tags: sqlite,json1,hsm
 
   - runs: |
       mkdir -p "${{targets.destdir}}/usr/local/bin"
