--- a/hydra.yaml
+++ b/hydra.yaml
@@ -31,7 +31,7 @@ pipeline:
 
   - runs: |
       mkdir -p "${{targets.destdir}}/usr/local/bin"
-      cp $GOPATH/bin/hydra "${{targets.destdir}}"/usr/local/bin/hydra
+      cp /home/build/melange-out/${{package.name}}/usr/bin/hydra "${{targets.destdir}}"/usr/local/bin/hydra
 
 update:
   enabled: true
