Fix: add dumb-init-privileged-netbindservice as runtime dep
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/ingress-nginx-controller-1.12.yaml
+++ b/ingress-nginx-controller-1.12.yaml
@@ -3,7 +3,7 @@ package:
   name: ingress-nginx-controller-1.12
   version: 1.12.0
   # There are manual changes to review between each package update. See 'vars:' section.
-  epoch: 7
+  epoch: 8
   description: "Ingress-NGINX Controller for Kubernetes"
   copyright:
     - license: Apache-2.0
@@ -17,6 +17,7 @@ package:
       - ca-certificates-bundle
       - ca-certificates
       - curl
+      - dumb-init-privileged-netbindservice
       - openssh-client
       - openssl
       - openssl-dev
@@ -494,13 +495,6 @@ pipeline:
 
       setcap cap_net_bind_service=+ep ${{targets.destdir}}/usr/bin/nginx \
         && setcap -v cap_net_bind_service=+ep ${{targets.destdir}}/usr/bin/nginx
-
-      echo "::::::::::::::::::::::::::::::::::::::::::"
-      echo ":::: SETCAP DUMB INIT                  ::::"
-      echo "::::::::::::::::::::::::::::::::::::::::::"
-
-      setcap cap_net_bind_service=+ep ${{targets.destdir}}/usr/bin/dumb-init \
-        && setcap -v cap_net_bind_service=+ep ${{targets.destdir}}/usr/bin/dumb-init
 
 subpackages:
   - name: ingress-nginx-controller-compat-${{vars.nginx-ingress-major-minor}}
