--- a/rpm.yaml
+++ b/rpm.yaml
@@ -35,6 +35,7 @@ environment:
       - py3-setuptools
       - python3-dev
       - readline-dev
+      - rpm-sequoia
       - sqlite-dev
       - xz-dev
       - zlib-dev
@@ -64,7 +65,6 @@ pipeline:
         -DLUA_LIBRARIES="$(pkg-config --variable=libdir lua5.4)/liblua.so" \
         -DLUA_INCLUDE_DIR="$(pkg-config --variable=includedir lua5.4)" \
         -DWITH_ARCHIVE=ON \
-        -DWITH_INTERNAL_OPENPGP=ON \
         -DWITH_OPENSSL=ON \
         -DWITH_AUDIT=OFF \
         -DWITH_SELINUX=OFF
