Rename licensee, some clean-up, remove ruby3.4-racc, add tests.
Signed-off-by: Łukasz 'sil2100' Zemczak <lukasz.zemczak@chainguard.dev>

--- a/ruby3.4-dotenv.yaml
+++ b/ruby3.4-dotenv.yaml
@@ -26,6 +26,7 @@ pipeline:
     with:
       repository: https://github.com/bkeepers/dotenv.git
       tag: v${{package.version}}
+      expected-commit: 5bbef666eca90d80f3d0031ececbb176dce624f6
 
   - uses: ruby/build
     with:
