--- a/ruby3.4-licensee.yaml
+++ b/ruby3.4-licensee.yaml
@@ -1,8 +1,8 @@
 package:
-  name: licensee
+  name: ruby3.4-licensee
   version: "9.18.0"
   epoch: 0
-  description: TBD
+  description: A Ruby Gem to detect under what license a project is distributed.
   copyright:
     - license: MIT
   dependencies:
@@ -13,6 +13,9 @@ package:
       - ruby3.4-rugged
       - ruby3.4-thor
       - ruby-3.4
+
+vars:
+  gem: licensee
 
 environment:
   contents:
@@ -29,11 +32,11 @@ pipeline:
 
   - uses: ruby/build
     with:
-      gem: ${{package.name}}
+      gem: ${{vars.gem}}
 
   - uses: ruby/install
     with:
-      gem: ${{package.name}}
+      gem: ${{vars.gem}}
       version: ${{package.version}}
 
   - uses: ruby/clean
@@ -47,7 +50,14 @@ update:
     tag-filter: v
 
 test:
+  environment:
+    contents:
+      packages:
+        - jq
   pipeline:
     - name: Check if command runs
       runs: |
         licensee --help
+    - name: Check if a simple license is detected
+      runs: |
+        test "$(licensee detect --json ./test-data | jq -r '.licenses[0].spdx_id')" = "MIT"
