--- a/ruby3.4-thor.yaml
+++ b/ruby3.4-thor.yaml
@@ -26,6 +26,7 @@ pipeline:
     with:
       repository: https://github.com/rails/thor.git
       tag: v${{package.version}}
+      expected-commit: 33b9682da680cda9404f9961a62ec208832cbff3
 
   - uses: ruby/build
     with:
