Correct copy commands
Signed-off-by: anushkamittal20 <anushka.mittal@chainguard.dev>

--- a/hydra.yaml
+++ b/hydra.yaml
@@ -29,10 +29,6 @@ pipeline:
       ldflags: -X 'github.com/ory/hydra/v2/driver/config.Version=$(git describe --abbrev=0 --tags)' -X 'github.com/ory/hydra/v2/driver/config.Date=$(TZ=UTC date -u "+%Y-%m-%dT%H:%M:%SZ")' -X 'github.com/ory/hydra/v2/driver/config.Commit=$(git rev-parse HEAD)'
       tags: sqlite,json1,hsm
 
-  - runs: |
-      mkdir -p "${{targets.destdir}}/usr/local/bin"
-      cp /home/build/melange-out/${{package.name}}/usr/bin/hydra "${{targets.destdir}}"/usr/local/bin/hydra
-
 update:
   enabled: true
   github:
@@ -50,7 +46,7 @@ test:
         /usr/local/bin/hydra version
         /usr/local/bin/hydra help
         export DSN=memory
-        /usr/local/bin/hydra migrate sql up -e --yes
-        /usr/local/bin/hydra serve all --dev &
+        /usr/bin/hydra migrate sql up -e --yes
+        /usr/bin/hydra serve all --dev &
         sleep 5
         curl -s http://localhost:4444/health/alive | grep '"status":"ok"'
