ignore regex patterns
Signed-off-by: anushkamittal20 <anushka.mittal@chainguard.dev>

--- a/hydra.yaml
+++ b/hydra.yaml
@@ -31,6 +31,9 @@ pipeline:
 
 update:
   enabled: true
+  ignore-regex-patterns:
+    - rc*
+    - pre*
   github:
     identifier: ory/hydra
     strip-prefix: v
@@ -43,8 +46,8 @@ test:
   pipeline:
     - runs: |
         set -ex
-        /usr/local/bin/hydra version
-        /usr/local/bin/hydra help
+        /usr/bin/hydra version
+        /usr/bin/hydra help
         export DSN=memory
         /usr/bin/hydra migrate sql up -e --yes
         /usr/bin/hydra serve all --dev &
