zsh.yaml: usrmerge /bin

--- a/zsh.yaml
+++ b/zsh.yaml
@@ -52,7 +52,7 @@ pipeline:
         --build=${{host.triplet.gnu}} \
         --host=${{host.triplet.gnu}} \
         --prefix=/usr \
-        --bindir=/bin \
+        --bindir=/usr/bin \
         --enable-etcdir=/etc/zsh \
         --enable-pcre \
         --enable-cap \
