--- a/weaviate.yaml
+++ b/weaviate.yaml
@@ -26,11 +26,10 @@ pipeline:
         github.com/go-jose/go-jose/v4@v4.0.5
 
   - runs: |
-      mkdir -p ${{targets.contextdir}}/bin
       GITHASH=$(git rev-parse --short HEAD)
       go build \
         -ldflags '-w -extldflags "-static" -X github.com/weaviate/weaviate/usecases/config.GitHash='"$GITHASH"'' \
-        -o ${{targets.contextdir}}/bin/weaviate ./cmd/weaviate-server
+        -o ${{targets.contextdir}}/usr/bin/weaviate ./cmd/weaviate-server
 
   - uses: strip
 
