--- a/s6.yaml
+++ b/s6.yaml
@@ -39,6 +39,7 @@ pipeline:
         --enable-shared \
         --enable-static \
         --disable-allstatic \
+        --bindir=/usr/bin \
         --libdir=/usr/lib \
         --libexecdir=/lib/s6 \
         --with-dynlib=/lib
@@ -59,10 +60,10 @@ subpackages:
     description: "s6 ipcserver"
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/bin
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
 
           for i in s6-ipcserver s6-ipcserver-socketbinder s6-ipcserverd s6-applyuidgid; do
-            mv "${{targets.destdir}}"/bin/$i "${{targets.subpkgdir}}"/bin/$i
+            mv "${{targets.destdir}}"/usr/bin/$i "${{targets.subpkgdir}}"/usr/bin/$i
           done
 
 update:
