usrmerge newrelic-nri-statsd

--- a/newrelic-nri-statsd.yaml
+++ b/newrelic-nri-statsd.yaml
@@ -23,9 +23,9 @@ pipeline:
       tag: v${{package.version}}
 
   - runs: |
-      mkdir -p "${{targets.destdir}}"/bin
+      mkdir -p "${{targets.destdir}}"/usr/bin
       mkdir -p "${{targets.destdir}}"/home/nonroot
-      mv /usr/bin/gostatsd "${{targets.destdir}}"/bin
+      mv /usr/bin/gostatsd "${{targets.destdir}}"/usr/bin
       # we created this directory because nri-statsd.sh expects it run-statsd.sh in working-dir
       # https://github.com/newrelic/nri-statsd/blob/e160a9db92e998d0a4d0262950fdd35d0f231ae4/nri-statsd.sh#L66
       # so as the user is going to be a nonroot at image, we need to create this directory and copy the files
