--- a/execline.yaml
+++ b/execline.yaml
@@ -28,6 +28,7 @@ pipeline:
         --enable-shared \
         --enable-static \
         --disable-allstatic \
+        --bindir=/usr/bin \
         --libdir=/usr/lib \
         --with-dynlib=/lib
 
