usrmerge container-entrypoint

--- a/container-entrypoint.yaml
+++ b/container-entrypoint.yaml
@@ -23,7 +23,7 @@ pipeline:
       expected-commit: cab04d2e3ad3b751fc25ed6c14bee942ae30e96c
 
   - runs: |
-      install -Dm755 entrypoint.sh -t ${{targets.destdir}}/bin
+      install -Dm755 entrypoint.sh -t ${{targets.destdir}}/usr/bin
 
 update:
   enabled: true
