feat: pombump netty for activemq-artemis vuln

--- a/apache-activemq-artemis.yaml
+++ b/apache-activemq-artemis.yaml
@@ -42,6 +42,8 @@ pipeline:
       repository: https://github.com/apache/activemq-artemis
       tag: ${{package.version}}
       expected-commit: fb1c6e3217e7453226e2e441df776e7a880571e1
+ 
+  - uses: maven/pombump
 
   - runs: |
       mvn -Prelease package -DskipTests -Drat.excludesFile=rat-exclusions.txt
