Add ecosystem annotation to a python package

--- a/py3-absl-py.yaml
+++ b/py3-absl-py.yaml
@@ -3,6 +3,8 @@ package:
   version: 2.1.0
   epoch: 3
   description: Abseil Python Common Libraries, see https://github.com/abseil/abseil-py.
+  annotations:
+    cgr.dev/ecosystem: python
   copyright:
     - license: Apache-2.0
   dependencies:
