util-linux - usrmerge-sbin

--- a/util-linux.yaml
+++ b/util-linux.yaml
@@ -45,6 +45,7 @@ pipeline:
       opts: |
         --disable-silent-rules \
         --enable-newgrp \
+        --sbindir=/usr/bin \
         --disable-nls \
         --disable-tls \
         --disable-kill \
